--- a/hand-on learning deep by myself/预备知识/2.2 数据操作.ipynb
+++ b/hand-on learning deep by myself/预备知识/2.2 数据操作.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,76 +43,40 @@
        "<NDArray 12 @cpu(0)>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x = nd.arange(12)\n",
+    "\n",
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(12,)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x.size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "[[ 0.  1.  2.  3.]\n",
-       " [ 4.  5.  6.  7.]\n",
-       " [ 8.  9. 10. 11.]]\n",
-       "<NDArray 3x4 @cpu(0)>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = x.reshape((3,4))\n",
     "a"
@@ -120,48 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "[[1. 1. 1. 1.]\n",
-       " [1. 1. 1. 1.]\n",
-       " [1. 1. 1. 1.]]\n",
-       "<NDArray 3x4 @cpu(0)>"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nd.ones((3,4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "[[2. 1. 4. 3.]\n",
-       " [1. 2. 3. 4.]\n",
-       " [4. 3. 2. 1.]]\n",
-       "<NDArray 3x4 @cpu(0)>"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Y = nd.array([[2, 1, 4, 3], [1, 2, 3, 4], [4, 3, 2, 1]])\n",
     "Y"
@@ -169,24 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "[[ 2.2122064   0.7740038   1.0434405   1.1839255 ]\n",
-       " [ 1.8917114  -1.2347414  -1.771029   -0.45138445]\n",
-       " [ 0.57938355 -1.856082   -1.9768796  -0.20801921]]\n",
-       "<NDArray 3x4 @cpu(0)>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nd.random.normal(0, 1, shape=(3, 4))"
    ]
@@ -200,96 +119,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "[[ 2.  2.  6.  6.]\n",
-       " [ 5.  7.  9. 11.]\n",
-       " [12. 12. 12. 12.]]\n",
-       "<NDArray 3x4 @cpu(0)>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a+Y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "[[ 0.  1.  8.  9.]\n",
-       " [ 4. 10. 18. 28.]\n",
-       " [32. 27. 20. 11.]]\n",
-       "<NDArray 3x4 @cpu(0)>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a*Y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "[[ 0.    1.    0.5   1.  ]\n",
-       " [ 4.    2.5   2.    1.75]\n",
-       " [ 2.    3.    5.   11.  ]]\n",
-       "<NDArray 3x4 @cpu(0)>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a/Y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "[[ 7.389056   2.7182817 54.59815   20.085537 ]\n",
-       " [ 2.7182817  7.389056  20.085537  54.59815  ]\n",
-       " [54.59815   20.085537   7.389056   2.7182817]]\n",
-       "<NDArray 3x4 @cpu(0)>"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Y.exp()"
    ]
@@ -310,26 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(\n",
-       " [[0.]\n",
-       "  [1.]\n",
-       "  [2.]]\n",
-       " <NDArray 3x1 @cpu(0)>, \n",
-       " [[0. 1.]]\n",
-       " <NDArray 1x2 @cpu(0)>)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = nd.arange(3).reshape((3, 1))\n",
     "B = nd.arange(2).reshape((1, 2))\n",
@@ -345,24 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "[[0. 1.]\n",
-       " [1. 2.]\n",
-       " [2. 3.]]\n",
-       "<NDArray 3x2 @cpu(0)>"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "A+B"
    ]
@@ -376,47 +203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "[[ 4.  5.  6.  7.]\n",
-       " [ 8.  9. 10. 11.]]\n",
-       "<NDArray 2x4 @cpu(0)>"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a[1:3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "[[ 0.  1.  2.  3.]\n",
-       " [ 9.  9.  9.  9.]\n",
-       " [ 8.  9. 10. 11.]]\n",
-       "<NDArray 3x4 @cpu(0)>"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a[1,2]= 9\n",
     "a"
@@ -440,7 +238,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2.6. NDArray和NumPy相互变换"
+    "## 2.2.6. NDArray和NumPy相互变换"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 总结"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[NDArray API 文档](https://mxnet.incubator.apache.org/api/python/docs/api/ndarray/index.html)"
    ]
   },
   {
